saturn-program-macros/tests/compile_fail/duplicate_btc_tx_cfg_section.stderr
error: duplicate `btc_tx_cfg` section
  --> tests/compile_fail/duplicate_btc_tx_cfg_section.rs:12:5
   |
12 |     btc_tx_cfg(max_inputs_to_sign = 2, max_modified_accounts = 2)
   |     ^^^^^^^^^^
